--- a/src/Components/AboutPage/About/Desc/_Desc.scss
+++ b/src/Components/AboutPage/About/Desc/_Desc.scss
@@ -1,25 +1,14 @@
 @use 'src/styles/base/_settings.scss' as *;
 
 .desc{
-    padding: 2rem;
-    background-color: map-get($map: $colores, $key: primario );
-    display: flex;
-    flex-direction: column;
-
-
-    &__p{
-          margin-bottom: 2rem;
-          color: white;
-          
-          span {
-            color: map-get($map: $colores, $key: secundario);
-            font-weight: 700;
-          }
-        }
-        
+    padding: 1rem 2rem 2rem;
+ 
+   
         &__img{
           align-self: center;
           position: relative;
+          z-index: 2;
+          width: fit-content;
         }
 
         .desc__circle{
@@ -34,5 +23,116 @@
          position: absolute;
          top: 1.5rem;
          left: 6%;
+         box-shadow: 4px 4px 5px 1px rgba(0, 0, 0, 0.253);
         }
+
+        &__cv{
+          background-color: white;
+          box-shadow: 4px 4px 5px 1px rgba(0, 0, 0, 0.267);
+          width: fit-content;
+          padding: 1rem 1rem;
+          border-radius: 50%;
+          margin-top: 2rem;
+          align-self: center;
+          color: map-get($map: $colores, $key: primario);
+          font-size: 3rem;
+          text-decoration: none;
+          font-weight: 700;
+          font-family: map-get($map: $fuentes, $key: secundaria);
+          position: absolute;
+          bottom: 0;
+          right: 0;
+
+          &:hover{
+            background-color: map-get($map: $colores, $key: lineas);
+            color: white;
+          }
+        }
+
+        &__cuadrado{
+          display: none;
+        }
+}
+
+@media (min-width: 425px) { 
+  .desc{
+    padding: 2rem 4rem;
+
+    &__p{
+      font-size: clamp(1.6rem, 3vw, 1.8rem);
+    }
+  }
+}
+
+@media (min-width: 768px) { 
+    .desc{
+
+      &__p{
+        font-size: 1.8rem;
+      }
+    }
+}
+
+
+
+@media (min-width: 1024px) { 
+    .desc{
+      padding: 4rem 4rem;
+      position: relative;
+      min-width: 50%;
+      max-width: 70rem;
+      height: 100%;
+      max-height: 70%;
+      margin: auto 0rem auto auto;
+    
+      
+      &__img{
+        position: absolute;
+        top: -12rem;
+        right: -12rem;
+        transform: scale(.7);
+        
+      }
+
+      &__p{
+        font-size: 2rem 
+      }
+
+      &__cuadrado{
+        position: absolute;
+        display: block;
+        bottom: -8rem;
+        right: -5rem;
+        transform: rotate(45deg);
+        z-index: 2;
+   
+      
+      }
+    }
+
+
+}
+
+@media (min-width: 1440px) { 
+    .desc{
+      &__img{
+        transform: scale(.9);
+      }
+
+      &__p{
+        font-size: 2.2rem;
+      }
+    }
+}
+
+@media (min-width: 1920px) { 
+  .desc{
+    &__img{
+      transform: scale(1);
+    }
+
+    &__p{
+      font-size: 2.4rem;
+    }
+  }
 }
