--- a/src/Components/AboutPage/About/_About.scss
+++ b/src/Components/AboutPage/About/_About.scss
@@ -1,14 +1,70 @@
 @use 'src/styles/base/_settings.scss' as *;
 
 .about{
+    margin-top: 10rem;
     background-color: map-get($map: $colores, $key: primario);
-    padding-top: 8rem;
-
-
 
     &__title {
-        color: white;
-        font-size: 3.5rem;
         padding: 2rem 2rem 0rem;
+        color: white;
+        font-size: clamp(3rem, 9vw, 3.5rem);
+        align-self: start;
     }
+    
+}
+
+
+
+@media (min-width: 425px) { 
+    .about{
+        &__title{
+            font-size: clamp(3.5rem, 6vw, 4rem);
+            padding: 2rem 4rem 0rem;
+        }
+    }
+}
+
+
+
+@media (min-width: 1024px) { 
+    .about{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+        padding: 0 4rem;
+        &__title{
+            font-size: 5rem;
+            padding: 0rem;
+            margin-bottom: 1rem;
+            font-family: map-get($map: $fuentes, $key: secundaria);
+        }
+
+     
+       
+    }
+}
+
+@media (min-width: 1440px) { 
+    .about{
+        &__title{
+            font-size: 6rem;
+          
+           
+        }
+    }
+
+}
+
+
+@media (min-width: 1920px) { 
+    .about{
+        &__title{
+            font-size: 7rem;
+          
+           
+        }
+    }
+
 }
