--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -5,8 +5,9 @@
     flex-direction: column;
     align-items: center;
     gap: .5rem;
-    padding: 1rem;
+   padding: 1rem;
     background-color: white;
+    width: 100%;
 
     p {
         font-size: 1.4rem;
@@ -24,5 +25,11 @@
         gap: 1rem;
         font-size: 1.4rem;
         color: map-get($map: $colores, $key: primario);
+    }
+}
+
+@media (min-width: 1024px) { 
+    .footer{
+        padding: 1rem 0rem 1rem 10rem;
     }
 }
