--- a/src/Components/ProjectPage/Proyectos/Proyectos-principal/Card/_Card.scss
+++ b/src/Components/ProjectPage/Proyectos/Proyectos-principal/Card/_Card.scss
@@ -1,12 +1,91 @@
 @use 'src/styles/base/_settings.scss' as *;
 
 .card{
-    width: 100%;
-    box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.295);
-    border-radius: .9rem;
+    width: fit-content;
+    max-width: 32rem;
+    height: fit-content;
+    
+
+    &__a{
+        width: fit-content;
+    }
 
     &__img{
-        border-radius: .8rem;
+
         width: 100%;
+        height: 50%;
+       
+    }
+
+}
+
+
+@media (min-width: 1024px) { 
+    .card{
+        max-width: 120rem;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+       gap: 4rem;
+
+        &__a{
+            grid-column: 1/6;
+            min-width: 100%;
+            box-shadow: 4px 4px 5px 1px map-get($map: $sombras, $key: negra);
+        }
+
+        &__img{
+       
+            height: 40rem;
+           
+        }
+    }
+
+    .card:nth-child(2n){
+        justify-items: end;
+
+        .card__a{
+            grid-column: 4/9;
+           
+        }
+
+        .card__complement{
+            grid-row: 1/2;
+            grid-column: 1/4;
+            
+            .complement__title{
+                align-self: start;
+            }
+
+            .complement__info{
+                align-self: start;
+            }
+
+            .complement__info-more{
+                align-self: center;
+            }
+
+            .complement__icons{
+                order: -1;
+                left: 0;
+                right: auto;
+
+                .complement__icon:nth-child(2){
+                    order: -1;
+                }
+            }
+
+            .complement__tec{
+                justify-content: start;
+            }
+        }
+    } 
+}
+
+@media (min-width: 1440px) { 
+    .card{
+        &__img{
+            height: 45rem;
+        }
     }
 }
