--- a/src/Components/ProjectPage/Proyectos/_Proyectos.scss
+++ b/src/Components/ProjectPage/Proyectos/_Proyectos.scss
@@ -2,13 +2,42 @@
 
 .project{
     padding: 2rem;
+    margin-top: 10rem;
+    background-color: white;
+    height: auto;
+
     
     &__title{
         font-size: 3.5rem;
         color: map-get($map: $colores, $key: primario);
+        text-align: center;
+       
+      
     }
 
     &__desc{
-        margin: 2rem 0rem;
+        margin: 3rem auto;
+        color: map-get($map: $colores, $key: terciario);
+        max-width: 45rem;
+        text-align: center;
     }
+}
+
+
+@media (min-width: 760px) { 
+    .project{
+        padding: 2rem 4rem;
+    }
+ 
+}
+
+
+@media (min-width: 1024px ) { 
+    .project{
+        padding: 0 5rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
 }
